[package]
name = "detect_subscriber"
version = "0.1.0"
authors = ["Rony Gabbai <rony.gabbai@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0"
rclrust-msg = { git = "https://github.com/rclrust/rclrust.git" }
rclrust = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"]}
rcl-sys = { git = "https://github.com/rclrust/rclrust.git", features = ["foxy"]}
tokio = { version = "1", features = ["full"] }
chrono = "0.4"  # You can check https://crates.io/crates/chrono for the latest version
clap = "3.0"